--- a/prightside.html
+++ b/prightside.html
@@ -89,12 +89,15 @@
                 </li>
                 <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Pythagorian
+                        Trigognometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a href="phypotenuse.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Hypotenuse</a>
-                        <a href="prightside.html" class="dropdown-item aactive"><i class="bi bi-symmetry-vertical"></i> Right side</a>
+                        <h5 class="dropdown-header">Pythagorean Theorem</h5>
+                        <a href="phypotenuse.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Hypotenuse Calculator</a>
+                        <a href="prightside.html" class="dropdown-item aactive"><i class="bi bi-symmetry-vertical"></i> Leg Calculator</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="equaltri.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Equal Triangles</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -128,11 +131,20 @@
                         <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="formulas.html"><i class="bi bi-book"></i> Formulas</a>
+                <li class="nav-item dropdown">
+                    <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Algebra
+                        <i class="bi bi-caret-down-fill"></i>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree Equations</a>
+                        <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2st Degree Equations</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear Systems</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="equations.html"><i class="bi bi-x"></i> Equations</a>
+                    <a class="nav-link" href="formulas.html"><i class="bi bi-book"></i> Formulas</a>
                 </li>
             </ul>
         </div>
