--- a/linear-systems.html
+++ b/linear-systems.html
@@ -197,9 +197,10 @@
             <button class="btn btn-success btn-lg" id="button">Calculate</button>
         </div>
         <br />
-        <div style="max-height: 1em; margin-bottom: 16px !important;">
-            <p class="text-success" style="margin-bottom: 16px !important;" id="output"></p>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output"></p>
         </div>
+        <br>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
