--- a/404.html
+++ b/404.html
@@ -134,8 +134,11 @@
                         <a href="" class="dropdown-item"><i class="bi bi-person-circle"></i> <span id="display">Not Signed In</span></a>
                         <a href="" class="dropdown-item" onclick="signOut();" id="signout"><i class="bi bi-door-closed"></i> Sign out</a>
                         <div class="dropdown-divider"></div>
-                        <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
                         <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
+                        <div class="dropdown-divider"></div>
+                        <h5 class="dropdown-header">Legal</h5>
+                        <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
+                        <a href="license.html" class="dropdown-item"><i class="bi bi-credit-card-2-front"></i> Software License</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -144,9 +147,11 @@
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree Equations</a>
-                        <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2st Degree Equations</a>
+                        <h5 class="dropdown-header">Equations</h5>
+                        <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
+                        <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
                         <div class="dropdown-divider"></div>
+                        <h5 class="dropdown-header">Systems of Equations</h5>
                         <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear Systems</a>
                     </div>
                 </li>
