--- a/license.html
+++ b/license.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- MAIL -->
-    <meta name="yandex-verification" content="f86171133514f762" />
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquid Geometry - Linear Systems</title>
+    <title>Liquid Geometry - License</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noodp" />
+    <meta name="description" content="Terms of Service(ToS) Liquid Geometry" />
     <meta name="title" content="Liquid Geometry">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver">
-    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="Liquid Inc." />
-    <meta name="og:url" content="https://www.liquidgeometry.tk" />
-    <meta name="og:title" content="Liquid Geometry" />
-    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="og:url" content="https://www.liquidgeometry.tk/license" />
+    <meta name="og:title" content="Liquid Geometry Terms of Service" />
+    <meta name="og:description" content="License Liquid Geometry" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Liquid Geometry" />
-    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="twitter:title" content="Liquid Geometry Terms of Service" />
+    <meta name="twitter:description" content="Terms of Service(ToS) Liquid Geometry" />
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
     <!-- STYLES -->
@@ -29,15 +27,12 @@
     <link href="Styles/Profile.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="Assets/logo.png">
     <!-- SCRIPTS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script data-ad-client="ca-pub-1524024547471266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- POPPER.JS ONLY FOR TOOLPITS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
     <script>
@@ -122,7 +117,7 @@
                         <a href="cpower.html" class="dropdown-item"><i class="bi bi-battery-half"></i> Power</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Account
                         <i class="bi bi-caret-down-fill"></i>
@@ -136,10 +131,10 @@
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Legal</h5>
                         <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
-                        <a href="license.html" class="dropdown-item"><i class="bi bi-credit-card-2-front"></i> Software License</a>
+                        <a href="license.html" class="dropdown-item aactive"><i class="bi bi-credit-card-2-front"></i> Software License</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown active">
+                <li class="nav-item dropdown">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algebra
                         <i class="bi bi-caret-down-fill"></i>
@@ -150,7 +145,7 @@
                         <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Systems of Equations</h5>
-                        <a href="linear-systems.html" class="dropdown-item aactive"><i class="bi bi-border-width"></i> Linear Systems</a>
+                        <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear Systems</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -161,64 +156,88 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="center">
-        <h1 class="text-white title">Liquid Systems; ax + by = c</h1>
-        <hr class="bg-danger" style="width: 60%;" />
-        <h3 class="text-white">First Equation:</h3>
-        <hr class="bg-danger" style="width: 40%;" />
-        <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
-        </div>
+    <!-- TOS START -->
+    <div class="text-white tos">
+        <h2>Open Source Software License / Notice</h2>
         <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h3 class="text-white">Second Equation:</h3>
-        <hr class="bg-danger" style="width: 40%;" />
-        <h4 class="text-white">Enter the value of <i>a</i></h4>
-        <div class="center-form">
-            <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the value of <i>b</i></h4>
-        <div class="center-form">
-            <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br>
-        <h4 class="text-white">Enter the value of <i>c</i></h4>
-        <div class="center-form">
-            <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.01" />
-        </div>
-        <br />
-        <div class="center-form">
-            <button class="btn btn-success btn-lg" id="button">Calculate</button>
-        </div>
-        <br />
-        <div style="max-height: 1em;">
-            <p class="text-success" id="output"></p>
-        </div>
-        <br>
-    </div>
+        <section id="breakdown">
+            <h3>Key Components</h3>
+            <br>
+            <div class=" row">
+                <div class=" col-xxl-3">
+                    <h4><i class="bi bi-credit-card-2-front"></i> MIT License</h4>
+                    <p style="opacity: 60%;">
+                        A short and simple permissive license with conditions only requiring preservation of copyright and license notices. Licensed works, modifications, and larger works may be distributed under different terms and without source code.
+                    </p>
+                </div>
+                <div class=" col-xxl-2">
+                    <h4>Permissions</h4>
+                    <ul style="list-style-type: none;">
+                        <li><i class="bi bi-check2"></i> Commercial use</li>
+                        <li><i class="bi bi-check2"></i> Modification</li>
+                        <li><i class="bi bi-check2"></i> Distribution</li>
+                        <li><i class="bi bi-check2"></i> Private use</li>
+                    </ul>
+                </div>
+                <div class=" col-xxl-2">
+                    <h4>Limitations</h4>
+                    <ul style="list-style-type: none;">
+                        <li><i class="bi bi-x-lg"></i>  Liability</li>
+                        <li><i class="bi bi-x-lg"></i>  Warranty</li>
+                    </ul>
+                </div>
+                <div class=" col-xxl-2">
+                    <h4>Conditions</h4>
+                    <ul style="list-style-type: none;">
+                        <li><i class="bi bi-info-circle"></i> License and copyright notice</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section id="description">
+            <h3>Description</h3>
+            <p style="opacity: 60%;">
+Copyright (c) 2021 Liquid Geometry
+
+<br>
+<br>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+<br>
+<br>
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+<br><br>
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+            </p>
+        </section>
+        <section id="disclaimer">
+            <h5>Disclaimer!</h5>
+            <p>this is not legal advice. <a href="https://opensource.guide/legal/" target="_blank">Learn more about open source software licsences</a></p>
+        </section>
+    <div>
+    <!-- TOS END -->
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
     <script src="OAuth/SignIn.js"></script>
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
-    <script src="js/linear-systems.js"></script>
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
