--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquid Geometry</title>
+    <title>MathFlare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Liquid Geometry">
-    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
+    <meta name="title" content="MathFlare">
+    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="author" content="Liquid Inc." />
-    <meta name="og:url" content="https://www.liquidgeometry.tk" />
-    <meta name="og:title" content="Liquid Geometry" />
+    <meta name="author" content="MathFlare LLC." />
+    <meta name="og:url" content="https://www.mathflare.tk" />
+    <meta name="og:title" content="MathFlare" />
     <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Liquid Geometry" />
+    <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
@@ -51,7 +51,7 @@
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.liquidgeometry.tk">Liquid Geometry</a>
+        <a class="navbar-brand" href="https://www.mathflare.tk">MathFlare</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -162,22 +162,22 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="dead-center">
-        <h1 class="text-white title">Liquid Geometry</span></h1>
+        <h1 class="text-white title">MathFlare</span></h1>
         <h3 class="text-danger">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex button-group">
-            <form action="https://github.com/liquid-geometry" target="_blank">
+            <form action="https://github.com/mathflare" target="_blank">
                 <button class="btn btn-dark">
                     <i class="bi bi-github"></i>
                     GitHub
                 </button>
             </form>
-            <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
+            <form action="https://github.com/mathflare/mathflare/issues" target="_blank">
                 <button class="btn btn-warning">
                     <i class="bi bi-bug-fill"></i>
                     Report a Bug
                 </button>
             </form>
-            <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
+            <form action="https://github.com/mathflare/mathflare/issues" target="_blank">
                 <button class="btn btn-success">
                     <i class="bi bi-lightbulb"></i>
                     Suggest an Idea
@@ -217,10 +217,10 @@
     </script>
     <script>
         $(document).ready(function () {
-            console.log("%cLiquid Geometry","color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
+            console.log("%cMathFlare","color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
             console.log("%cthe go-to open-source website for geometry and mathematics","color: OrangeRed; font-weight: 500; font-family:consolas; font-size: 25px");
             console.log("%cby the way, the curiosity killed the cat you know...","color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
-            console.log("%ccourtesy of Liquid Geometry LLC.","color: DodgerBlue; font-weight: 400; font-family:consolas");
+            console.log("%ccourtesy of MathFlare LLC.","color: DodgerBlue; font-weight: 400; font-family:consolas");
         });
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
