--- a/clenght.html
+++ b/clenght.html
@@ -4,20 +4,20 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquid Geometry - Length Converter</title>
+    <title>MathFlare - Length Converter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noodp" />
+    <meta name="title" content="MathFlare">
+    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="title" content="Liquid Geometry - Length Converter">
-    <meta name="author" content="Liquid Inc." />
-    <meta name="og:url" content="https://www.liquidgeometry.tk/clenght" />
-    <meta name="og:title" content="Liquid Geometry" />
+    <meta name="author" content="MathFlare LLC." />
+    <meta name="og:url" content="https://www.mathflare.tk" />
+    <meta name="og:title" content="MathFlare" />
     <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Liquid Geometry - Length Converter" />
+    <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
@@ -46,7 +46,7 @@
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.liquidgeometry.tk">Liquid Geometry</a>
+        <a class="navbar-brand" href="https://www.mathflare.tk">MathFlare</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
