--- a/tos.html
+++ b/tos.html
@@ -4,21 +4,21 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Liquid Geometry - ToS</title>
+    <title>MathFlare - ToS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noodp" />
-    <meta name="description" content="Terms of Service(ToS) Liquid Geometry" />
-    <meta name="title" content="Liquid Geometry">
-    <meta name="author" content="Liquid Inc." />
-    <meta name="og:url" content="https://www.liquidgeometry.tk/tos" />
-    <meta name="og:title" content="Liquid Geometry Terms of Service" />
-    <meta name="og:description" content="Terms of Service(ToS) Liquid Geometry" />
+    <meta name="title" content="MathFlare">
+    <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
+    <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+    <meta name="author" content="MathFlare LLC." />
+    <meta name="og:url" content="https://www.mathflare.tk" />
+    <meta name="og:title" content="MathFlare" />
+    <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Liquid Geometry Terms of Service" />
-    <meta name="twitter:description" content="Terms of Service(ToS) Liquid Geometry" />
+    <meta name="twitter:title" content="MathFlare" />
+    <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
     <!-- STYLES -->
@@ -46,7 +46,7 @@
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="https://www.liquidgeometry.tk">Liquid Geometry</a>
+        <a class="navbar-brand" href="https://www.mathflare.tk">MathFlare</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -160,7 +160,7 @@
     <div class="text-white tos">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
-        <p>Your privacy is important to us. It is Liquid Geometry&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.liquidgeometry.tk">https://www.liquidgeometry.tk</a>, and other sites we own and operate. </p>
+        <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.liquidgeometry.tk">https://www.liquidgeometry.tk</a>, and other sites we own and operate. </p>
         <p>This policy is effective as of 20 April 2021 and was last updated on 23 May 2021.</p>
         </section>
         <section id="info-we-collect">
