--- a/tos.html
+++ b/tos.html
@@ -160,7 +160,7 @@
     <div class="text-white tos">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
-        <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.liquidgeometry.tk">https://www.liquidgeometry.tk</a>, and other sites we own and operate. </p>
+        <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://www.mathflare.tk">https://www.mathflare.tk</a>, and other sites we own and operate. </p>
         <p>This policy is effective as of 20 April 2021 and was last updated on 23 May 2021.</p>
         </section>
         <section id="info-we-collect">
