--- a/asquare.html
+++ b/asquare.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Square</h1>
+        <h1 class="text-white title">Square</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the square's side</h4>
         <div class="center-form">
