--- a/equations.html
+++ b/equations.html
@@ -159,7 +159,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid First Degree Equations</h1>
+        <h1 class="text-white title">First Degree Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
         <h4 class="text-white">X &#43; Y &#61; Z</h4>
