--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Hypotenuse</h1>
+        <h1 class="text-white title">Hypotenuse</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the right triangle's first leg</h4>
         <div class="center-form">
