--- a/apara.html
+++ b/apara.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Parallelogram</h1>
+        <h1 class="text-white title">Parallelogram</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the parallelogram's width</h4>
         <div class="center-form">
