--- a/atrapezoid.html
+++ b/atrapezoid.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Trapezoid</h1>
+        <h1 class="text-white title">Trapezoid</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the trapezoid's small base</h4>
         <div class="center-form">
