--- a/atriangle.html
+++ b/atriangle.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Tringle</h1>
+        <h1 class="text-white title">Tringle</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the triangle's base</h4>
         <div class="center-form">
