--- a/formulas.html
+++ b/formulas.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center table-margin">
-        <h1 class="text-white title">Liquid Formulas</h1>
+        <h1 class="text-white title">MathFlare Cheat Sheet</h1>
         <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
         <h3 class="text-white" id="trig-num">Τrigonometric Νumbers <i id="copy" title="copy to clipboard" class="bi bi-clipboard"></i></h3>
