--- a/prightside.html
+++ b/prightside.html
@@ -157,7 +157,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Right Side</h1>
+        <h1 class="text-white title">Right Side</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the triangle's hypotenuse</h4>
         <div class="center-form">
