--- a/atriangle.html
+++ b/atriangle.html
@@ -157,14 +157,14 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Tringle</h1>
+        <h1 class="text-white title">Triangle</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">Enter the triangle's base</h4>
+        <h4 class="text-white">Enter the triangle's leg</h4>
         <div class="center-form">
             <input type="number" id="fside" placeholder="base" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
-        <h4 class="text-white">Enter the triangle's height</h4>
+        <h4 class="text-white">Enter the triangle's corresponding height</h4>
         <div class="center-form">
             <input type="number" id="height" placeholder="height" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
