--- a/linear-systems.html
+++ b/linear-systems.html
@@ -162,10 +162,10 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white title">Liquid Systems; ax + by = c</h1>
+        <h1 class="text-white title">Linear 2x2 Systems; ax + by = c</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h3 class="text-white">First Equation:</h3>
-        <hr class="bg-danger" style="width: 40%;" />
+        <hr class="bg-danger" style="width: 50%;" />
         <h4 class="text-white">Enter the value of <i>a</i></h4>
         <div class="center-form">
             <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
@@ -182,7 +182,7 @@
         </div>
         <br>
         <h3 class="text-white">Second Equation:</h3>
-        <hr class="bg-danger" style="width: 40%;" />
+        <hr class="bg-danger" style="width: 50%;" />
         <h4 class="text-white">Enter the value of <i>a</i></h4>
         <div class="center-form">
             <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.01" />
