--- a/license.html
+++ b/license.html
@@ -160,6 +160,10 @@
     <div class="text-white tos">
         <h2>Open Source Software License / Notice</h2>
         <br>
+        <section id="before-you-read">
+            <h3>Before you Read</h3>
+            <p>What all of the things below basically say is that you may use our code as long as you include the same MIT License and Copyrights <code class="codeblock">Copyright (c) 2021 MathFlare LLC. - All rights reserved. - Licensed under the MIT License</code></p>
+        </section>
         <section id="breakdown">
             <h3>Key Components</h3>
             <br>
