--- a/prightside.html
+++ b/prightside.html
@@ -158,7 +158,7 @@
     <!-- NAVBAR END -->
     <div class="center">
         <h1 class="text-white title">Right Side</h1>
-        <p class="text-warning"><i class="bi bi-exclamation-triangle"></i> JavaScript has been acting up a bit. Procees at your own risk!</p>
+        <p class="text-warning"><i class="bi bi-exclamation-triangle"></i> JavaScript has been acting up a bit. Proceed at your own risk!</p>
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the triangle's hypotenuse</h4>
         <div class="center-form">
