--- a/formulas.html
+++ b/formulas.html
@@ -160,8 +160,8 @@
         <h1 class="text-white title">MathFlare Cheat Sheet</h1>
         <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
-        <h3 class="text-white" id="trig-num">Τrigonometric Νumbers <i id="copy" title="copy to clipboard" class="bi bi-clipboard"></i></h3>
-        <table class="table table-bordered text-white formulas-table">
+        <h3 class="text-white" id="trig-num">Τrigonometric Νumbers</h3>
+        <table class="table table-bordered text-white formulas-table" id="trig-nums">
             <thead class="bg-primary head">
                 <tr>
                     <th>Angle</th>
