--- a/contact.html
+++ b/contact.html
@@ -175,6 +175,13 @@
                         <input type="submit" id="clear" value="Clear" class="btn btn-danger"/>
                     </div>
             </form>
+            <div class="container-sm">
+                <p>While you are writing us an email, let us tell you a little bit about our website, MathFlare (previously konwn as "Liquid Geometry")!
+                 So jthe proect started as a desktop application using 
+                 <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank">C#</a> and it later 
+                 evolved to a <a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">front-end web app</a> (like a pokemon) using <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a>, <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML</a> and <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">CSS</a>. The website went 
+                 through many redesigns and <a href="https://en.wikipedia.org/wiki/Code_refactoring" target="_blank">refactorings</a> but is has finally came up to this <a href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a> and <a href="https://en.wikipedia.org/wiki/JQuery" target="_blank">JQuery</a> masterpiece!</p>
+            </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
