--- a/license.html
+++ b/license.html
@@ -162,7 +162,7 @@
         <br>
         <section id="before-you-read">
             <h3>Before you Read</h3>
-            <p>What all of the things below basically say is that you may use our code as long as you include the same MIT License and Copyrights <code class="codeblock">Copyright (c) 2021 MathFlare LLC. - All rights reserved. - Licensed under the MIT License</code></p>
+            <p>What all of the things below basically say is that you may use our code as is as long as you include the same MIT License and Copyrights <code class="codeblock">Copyright (c) 2021 MathFlare LLC. - All rights reserved. - Licensed under the MIT License</code></p>
         </section>
         <section id="breakdown">
             <h3>Key Components</h3>
@@ -200,7 +200,7 @@
         </section>
         <section id="description">
             <h3>Description</h3>
-            <p style="opacity: 60%;">
+            <p class=" codeblock" style="opacity: 60%;">
 Copyright (c) 2021 MathFlare
 
 <br>
